--- a/index.html
+++ b/index.html
@@ -9,16 +9,24 @@
 
 <body>
     <header>
-        <a href="/">WEBSTUDIO</a>
         <nav>
+            <a href="/index.html">WEBSTUDIO</a>
             <ul>
                 <li><a href="#studio">Studio</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <address>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </address>
     </header>
     <main>
 
@@ -28,6 +36,7 @@
         </section>
 
         <section id="advantages-section">
+            <h2>Advantages</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -64,22 +73,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="images/product-designer.jpg" alt="Product Designer" width="264" />
+                    <img src="/images/product-designer.jpg" alt="Product Designer" width="264" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="images/frontend-developer.jpg" alt="Frontend Developer" width="264" />
+                    <img src="/images/frontend-developer.jpg" alt="Frontend Developer" width="264" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="images/marketing.jpg" alt="Marketing Specialist" width="264" />
+                    <img src="/images/marketing.jpg" alt="Marketing Specialist" width="264" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="images/ui-designer.jpg" alt="UI Designer" width="264" />
+                    <img src="/images/ui-designer.jpg" alt="UI Designer" width="264" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
