--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="/images/product-designer.jpg" alt="Product Designer" width="264" />
+                    <img src="./images/product-designer.jpg" alt="Product Designer" width="264" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/frontend-developer.jpg" alt="Frontend Developer" width="264" />
+                    <img src="./images/frontend-developer.jpg" alt="Frontend Developer" width="264" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/marketing.jpg" alt="Marketing Specialist" width="264" />
+                    <img src="./images/marketing.jpg" alt="Marketing Specialist" width="264" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/ui-designer.jpg" alt="UI Designer" width="264" />
+                    <img src="./images/ui-designer.jpg" alt="UI Designer" width="264" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
